# znak

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  build.ts  bun.lockb  bunfig.toml  fly.toml  get-queries.sh  go.mod  go.sum  index.ts  jsr.json  mise.toml  package.json  theme-schema.json  theme.css  theme.json  theme.toml  tsconfig.json  types.d.ts  version.sh  version.ts  wrangler.jsonc  znak.go  znak.test.ts  znak_test.go
.changeset/: afraid-pants-sneeze.md  angry-countries-peel.md  angry-teachers-protect.md  brave-coats-serve.md  calm-adults-wait.md  clean-terms-check.md  dirty-bears-suffer.md  dry-socks-search.md  fair-oranges-smile.md  few-snails-pump.md  flat-mangos-roll.md  four-mugs-suffer.md  fresh-paws-give.md  funny-ways-appear.md  giant-maps-shave.md  gold-pianos-pump.md  itchy-avocados-crash.md  light-eagles-allow.md  little-monkeys-lie.md  moody-bulldogs-walk.md  pink-balloons-sit.md  popular-spies-lick.md  rich-avocados-look.md  rude-pianos-invent.md  rude-rings-wink.md  shiny-monkeys-bathe.md  short-chairs-battle.md  silly-months-scream.md  sixty-shoes-collect.md  small-phones-thank.md  ten-snakes-wash.md  tough-papayas-boil.md  wet-pigs-retire.md  wicked-ligers-judge.md  yellow-rocks-kneel.md
.github/workflows/: changesets.yml  docs.yaml  highlights.yml  publish.yml  release.yml  test.yaml  test.yml
bench/: bench.md  bench.sh  bench.ts
crates/highlight/: Cargo.toml  README.md
crates/highlight/queries/: update.sh
crates/highlight/queries/agda/: highlights.scm
crates/highlight/src/: languages.rs  lib.rs  theme.rs
crates/html/: Cargo.toml  README.md
crates/html/src/: lib.rs  macros.rs  render.rs  types.rs
crates/html/src/parser/: mod.rs  tags.rs  tests.rs  types.rs
crates/math/: Cargo.toml  README.md
crates/math/src/: lib.rs
crates/tmpl/: Cargo.toml  README.md
crates/tmpl/src/: lib.rs
crates/tree-sitter-languages/: Cargo.toml  README.md
crates/tree-sitter-languages/queries/: update.sh  update.ts
crates/tree-sitter-languages/queries/cpp/: highlights.scm  injections.scm
crates/tree-sitter-languages/queries/javascript/: highlights.scm  injections.scm  locals.scm
crates/tree-sitter-languages/queries/jsx/: highlights.scm  injections.scm  locals.scm
crates/tree-sitter-languages/queries/ocaml-interface/: highlights.scm
crates/tree-sitter-languages/queries/tsx/: highlights.scm  locals.scm
crates/tree-sitter-languages/queries/typescript/: highlights.scm  locals.scm
crates/tree-sitter-languages/src/: lib.rs
crates/znak/: Cargo.toml  README.md  demo.md
crates/znak/src/: frontmatter.rs  headings.rs  lib.rs
crates/znak/src/parser/: containers.rs  inline_formatting.rs  list_items.rs  mod.rs  renderer.rs  tables.rs  tests.rs  types.rs
crates/znak/src/parser/utils/: char_string.rs
demo/: Makefile  README.md  bun.lockb  index.ts  package.json  wrangler.toml
demo/scripts/: build.ts  dev.ts
demo/src/: index.html  script.ts  style.css
docs/: highlight.md  index.md  syntax.md
docs/public/: theme-schema.json
highlight/: highlight.go  highlight_test.go  languages.go  theme.go
highlight/cmd/: get_queries.go
highlight/queries/agda/: highlights.scm
highlight/queries/scala/: injections.scm
highlight/testdata/: test.cpp  test.cs  test.css  test.html  test.js  test.rb  test.scala  test.tsx
internal/parser/: containers.go  inline_formatting.go  list_items.go  math.go  parser.go  parser_test.go  renderer.go  slugger.go  syntax_highlighting.go
internal/testutils/: compare-html.go  test-render.go
parser/: list_items.go  math.go  parser.go  parser_test.go  tables.go  types.go
src/: lib.rs  renderer.rs  renderer.ts  test.rs  types.d.ts  types.rs
src/parser/: blockquotes.ts  code-block.ts  containers.rs  containers.ts  frontmatter.rs  headings.rs  headings.ts  images.ts  index.ts  inline-formatting.ts  inline_formatting.rs  list-items.ts  list_items.rs  mod.rs  parser.rs  tables.rs  tables.ts
src/utils/: escape-html.ts  escape_html.rs  math.rs  math.ts  mod.rs  slugger.rs  slugger.ts  syntax-highlighting.ts  syntax_highlighting.rs
types/: heading.go  slugger.go  types.go
