[package]
name = "znak-lang"
version = {workspace = true}
edition = {workspace = true}

[workspace]
members = ["bin/"]

[workspace.package]
version = "0.14.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
highlight = { git = "https://gitlab.com/noClaps/highlight", version = "0.7.0" }
pulldown-latex = "0.7.1"
regex = "1.11.1"
serde = "1.0.218"
