[package]
name = "tree-sitter-languages"
edition.workspace = true

[dependencies]
tree-sitter-bash = { version = "0.25.0", optional = true }
tree-sitter-c = { version = "0.24.1", optional = true }
tree-sitter-comment = { git = "https://github.com/thedadams/tree-sitter-comment", branch = "zed", optional = true }
tree-sitter-css = { version = "0.25.0", optional = true }
tree-sitter-gitattributes = { optional = true, git = "https://github.com/tree-sitter-grammars/tree-sitter-gitattributes" }
tree-sitter-go = { version = "0.25.0", optional = true }
tree-sitter-highlight = "0.25.10"
tree-sitter-html = { version = "0.23.2", optional = true }
tree-sitter-javascript = { version = "0.25.0", optional = true }
tree-sitter-jsdoc = { version = "0.25.0", optional = true }
tree-sitter-json = { version = "0.24.8", optional = true }
tree-sitter-julia = { version = "0.23.1", optional = true }
tree-sitter-language = "0.1.5"
tree-sitter-lua = { git = "https://github.com/tree-sitter-grammars/tree-sitter-lua", optional = true }
tree-sitter-make = { version = "1.1.1", optional = true }
tree-sitter-md = { version = "0.5.1", optional = true }
tree-sitter-python = { version = "0.25.0", optional = true }
tree-sitter-regex = { version = "0.25.0", optional = true }
tree-sitter-rust = { version = "0.24.0", optional = true }
tree-sitter-scheme = { version = "0.24.7", optional = true }
tree-sitter-sequel = { version = "0.3.11", optional = true }
tree-sitter-swift = { version = "0.7.1", optional = true }
tree-sitter-toml-ng = { version = "0.7.0", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }
tree-sitter-xml = { version = "0.7.0", optional = true }
tree-sitter-yaml = { version = "0.7.2", optional = true }

[features]
all = [
    "bash",
    "c",
    "comment",
    "css",
    "git",
    "go",
    "html",
    "javascript",
    "jsdoc",
    "json",
    "julia",
    "lua",
    "make",
    "markdown",
    "python",
    "regex",
    "rust",
    "scheme",
    "sql",
    "swift",
    "toml",
    "typescript",
    "xml",
    "yaml"
]
bash = ["dep:tree-sitter-bash"]
c = ["dep:tree-sitter-c"]
comment = ["dep:tree-sitter-comment"]
css = ["dep:tree-sitter-css"]
git = ["dep:tree-sitter-gitattributes"]
go = ["dep:tree-sitter-go"]
html = ["dep:tree-sitter-html"]
javascript = ["dep:tree-sitter-javascript"]
jsdoc = ["dep:tree-sitter-jsdoc"]
json = ["dep:tree-sitter-json"]
julia = ["dep:tree-sitter-julia"]
lua = ["dep:tree-sitter-lua"]
make = ["dep:tree-sitter-make"]
markdown = ["dep:tree-sitter-md"]
python = ["dep:tree-sitter-python"]
regex = ["dep:tree-sitter-regex"]
rust = ["dep:tree-sitter-rust"]
scheme = ["dep:tree-sitter-scheme"]
sql = ["dep:tree-sitter-sequel"]
swift = ["dep:tree-sitter-swift"]
toml = ["dep:tree-sitter-toml-ng"]
typescript = ["dep:tree-sitter-typescript"]
xml = ["dep:tree-sitter-xml"]
yaml = ["dep:tree-sitter-yaml"]
